--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <meta name="Keywords" content="Agencia Digital, CSS, HTML">
 
     <link rel="stylesheet" href="css/estilo.css">
+    <link rel="stylesheet" href="css/responsivo.css">
 
     <title>Agência Fake</title>
 
@@ -52,7 +53,69 @@
 
     </header>
 
+    <section>
 
+        <h2>O que podemos fazer pelo seu negício?</h2>
+
+        <div class="servicos">
+
+            <div class="card">
+                <img src="img/pc.png">
+                <div class="card-text">
+                <h3>Desenvolvimento de Sites</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde amet sint sunt similique, laboriosam sequi incidunt sit libero dolores voluptatum ea alias doloremque neque inventore odio cupiditate, sapiente omnis quibusdam?</p>
+                </div>
+
+                <div class="texto-oculto">
+                <h3>Outro Conteúdo Qualquer</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde amet sint sunt similique, laboriosam sequi incidunt sit libero dolores voluptatum ea alias doloremque neque inventore odio cupiditate, sapiente omnis quibusdam?</p>
+                </div>
+
+            </div>
+            
+            <div class="card">
+                <img src="img/smartphone.png">
+                <div class="card-text">
+                <h3>Desenvolvimento de Apps</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde amet sint sunt similique, laboriosam sequi incidunt sit libero dolores voluptatum ea alias doloremque neque inventore odio cupiditate, sapiente omnis quibusdam?</p>
+                </div>
+
+                <div class="texto-oculto">
+                <h3>Outro Conteúdo Qualquer</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde amet sint sunt similique, laboriosam sequi incidunt sit libero dolores voluptatum ea alias doloremque neque inventore odio cupiditate, sapiente omnis quibusdam?</p>
+                </div>
+
+            </div>
+            
+            <div class="card">
+                <img src="img/marketing.png">
+                <div class="card-text">
+                <h3>Marketing</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde amet sint sunt similique, laboriosam sequi incidunt sit libero dolores voluptatum ea alias doloremque neque inventore odio cupiditate, sapiente omnis quibusdam?</p>
+                </div>
+
+                <div class="texto-oculto">
+                <h3>Outro Conteúdo Qualquer</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde amet sint sunt similique, laboriosam sequi incidunt sit libero dolores voluptatum ea alias doloremque neque inventore odio cupiditate, sapiente omnis quibusdam?</p>
+                </div>
+
+            </div>
+        </div>
+
+    </section>
+
+    <footer>
+
+        <div class="logo-rodape">
+        <h1 class="agencia">Agência Fake</h1>
+        <p style="color:white;">Um site feito com HTML e CSS Puro</p>
+        </div>
+
+        <b style="color:white;">© Todos os direitors reservados</b>
+
+    </footer>
+
+    <a href="#"><img src="img/whats.png" class="whats"></a>
 
 </body>
 
